# RAG_ia

./: .gitignore  Readme.md  pyproject.toml  rag.py  readme.ipynb
data/all_chunks/: all_chunks.json
data/chroma_res/: Cours1_Base-3ac8abed_chunks.json  Cours1_Base-3dbf6a0b_chunks.json  Cours1_Base-8cd6a096_chunks.json  Cours1_Base_chunks.json  Cours2_relations-02d1da4b_chunks.json  Cours2_relations-a94362a4_chunks.json  Cours2_relations_chunks.json  Cours3_triggers-6456364b_chunks.json  Cours3_triggers-9f7c9b34_chunks.json  Cours3_triggers_chunks.json  Cours4_Transactions_chunks.json  GUIDE_ULTIME_INVESTISSEMENT-IMMOBILIER_DUR_chunks.json  Horama_INGE_4-0577cfda_chunks.json  Mod_les_de_langage_open_source____2_milliards_de_param_tres__pour_RAG_local_chunks.json  cours_IA_chunks.json
src/: app.py  chroma_database.py  creation_champs_metadonne.py  embedding.py  gestion_fichier.py  gestionnaire_fichier.py  load_fichier.py  main.py  modele_Embeddings.py  modele_LLM.py  module_app.py  path_file.py  prompt.py  rag.py  vectoriel_research.py
src/front/: app.py  cli.py  module_app.py
src/modele/: modele_Embeddings.py  modele_LLM_hugface.py  modele_LLM_ollama.py
src/rag/: chroma_database.py  (+8 more)
test/: affichage_all_chunks.py  ecriture_all_chunks_Chromadb.py  list_metadonne_Chromadb.py  mise_a_jour_metadonne_Chromadb.py  modification_database.py  print_dependance.py  suppression_database_Chromadb.py  suppression_files_Chromadb.py  test_CLI.py  test_augmentation_metadata.py  test_llm_ollama.py  test_parsing.py  test_rag.py  utilisation_GPU.py  vestorisation_dossier_rag.py
(+8 files in other folders)
