[project]
name = "rag-ia"
version = "0.1.0"
description = ""
authors = [
    {name = "Tunderalpha ",email = "131662618+AlexisGauthron@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "sentence-transformers >=5.1.1,<6.0.0",
    "faiss-cpu >=1.12.0,<2.0.0",
    "transformers >=4.57.0,<5.0.0",
    "numpy >=2.3.3,<3.0.0",
    "torch >=2.5.1,<3.0.0",
    "torchvision >=0.20.1,<0.21.0",
    "torchaudio >=2.5.1,<3.0.0",
    "langchain >=0.3.27,<0.4.0",
    "langchain-community >=0.3.31,<0.4.0",
    "langchain-huggingface >=0.3.1,<0.4.0",
    "chromadb >=1.1.1,<2.0.0",
    "pypdf >=6.1.1,<7.0.0",
    "unstructured >=0.18.15,<0.19.0",
    "markdown >=3.9,<4.0",
    "sentencepiece >=0.2.1,<0.3.0",
    "lark >=1.3.0,<2.0.0",
    "accelerate >=1.10.1,<2.0.0",
    "bitsandbytes >=0.48.1,<0.49.0",
    "langchain-ollama >=0.3.10,<0.4.0",
    "streamlit >=1.50.0,<2.0.0",
]

[tool.poetry]
package-mode = false

[[tool.poetry.source]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"



[tool.poetry.dependencies]
torch = {source = "pytorch-cu121"}
torchvision = {source = "pytorch-cu121"}
torchaudio = {source = "pytorch-cu121"}
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
